Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ATS Resume Builder</title>
   <meta name="description" content="Build an ATS-friendly resume and cover letter. Professional templates, PDF export, and keyword match checking." />
+  <meta name="google-site-verification" content="xnI6hWhjGn-BaJ3gSVHC29VTDdMpSE1NN7M_HzTItgw" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
