--- a/builder.html
+++ b/builder.html
@@ -31,6 +31,7 @@
       <div class="toolbar">
         <button class="btn btn-primary" id="exportPdfBtn" type="button">Export PDF</button>
         <button class="btn btn-ghost" id="resetBtn" type="button">Reset</button>
+        <button class="btn btn-ghost" id="aiAssistBtn" type="button">AI Assist</button>
       </div>
 
       <div class="field">
@@ -155,7 +156,36 @@
     </div>
   </footer>
 
+  <div id="aiModal" class="modal" style="display: none;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>AI Resume Assistant</h3>
+        <button class="modal-close" id="aiModalClose">&times;</button>
+      </div>
+      <div class="modal-body">
+        <div class="ai-section">
+          <h4>What would you like help with?</h4>
+          <div class="ai-options">
+            <button class="btn btn-outline" data-ai-action="improve-summary">Improve my summary</button>
+            <button class="btn btn-outline" data-ai-action="strengthen-bullets">Strengthen bullet points</button>
+            <button class="btn btn-outline" data-ai-action="suggest-skills">Suggest relevant skills</button>
+            <button class="btn btn-outline" data-ai-action="tailor-to-job">Tailor to job description</button>
+          </div>
+        </div>
+        <div class="ai-input-section" style="display: none;">
+          <label for="aiTarget">Target job description (optional)</label>
+          <textarea id="aiTarget" rows="4" placeholder="Paste the job description you're applying for..."></textarea>
+        </div>
+        <div class="ai-output" id="aiOutput" style="display: none;">
+          <div class="ai-loading" style="display: none;">Processing...</div>
+          <div class="ai-suggestions"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="./site.js"></script>
+  <script src="./ai-assist.js"></script>
   <script src="./builder.js"></script>
 </body>
 </html>
