Add AI icon and personalized greeting system for visitors

--- a/builder.html
+++ b/builder.html
@@ -31,7 +31,10 @@
       <div class="toolbar">
         <button class="btn btn-primary" id="exportPdfBtn" type="button">Export PDF</button>
         <button class="btn btn-ghost" id="resetBtn" type="button">Reset</button>
-        <button class="btn btn-ghost" id="aiAssistBtn" type="button">AI Assist</button>
+        <button class="btn btn-ghost" id="aiAssistBtn" type="button">
+          <img src="./ai-icon.svg" alt="AI" style="width: 16px; height: 16px; margin-right: 4px;">
+          AI Assist
+        </button>
       </div>
 
       <div class="field">
@@ -188,6 +191,7 @@
   <script src="./site.js"></script>
   <script src="./web-search.js"></script>
   <script src="./ai-assist.js"></script>
+  <script src="./ai-greeter.js"></script>
   <script src="./builder.js"></script>
 </body>
 </html>
