Add AI chat CSS link to builder.html

--- a/builder.html
+++ b/builder.html
@@ -6,6 +6,7 @@
   <title>Builder | ATS Resume Builder</title>
   <meta name="description" content="Build an ATS-friendly resume. Autosave, templates, and PDF export." />
   <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./ai-chat.css" />
 </head>
 <body class="builder-body">
   <header class="site-header">
