Add Google AdSense integration to all HTML pages

--- a/about.html
+++ b/about.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About | ATS Resume Builder</title>
-  <meta name="description" content="About ATS Resume Builder." />
+  <meta name="description" content="Learn about ATS Resume Builder and our mission to help job seekers create better resumes." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
