--- a/ats.html
+++ b/ats.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ATS Checker | ATS Resume Builder</title>
-  <meta name="description" content="Check your resume keyword match vs a job description. Get an ATS match score and actionable suggestions." />
+  <meta name="description" content="Check your resume against ATS systems. Get keyword match scores and optimization tips." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
