--- a/builder.html
+++ b/builder.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Builder | ATS Resume Builder</title>
   <meta name="description" content="Build an ATS-friendly resume. Autosave, templates, and PDF export." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
   <link rel="stylesheet" href="./ai-chat.css" />
 </head>
