--- a/guides/ats-resume.html
+++ b/guides/ats-resume.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ATS-Friendly Resume Guide | ATS Resume Builder</title>
-  <meta name="description" content="Learn how to write an ATS-friendly resume: formatting rules, sections, keywords, and common mistakes." />
+  <meta name="description" content="How to write an ATS-friendly resume that gets past automated screening systems." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
