--- a/guides/resume-bullets.html
+++ b/guides/resume-bullets.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resume Bullet Examples | ATS Resume Builder</title>
-  <meta name="description" content="High-impact resume bullet examples you can adapt for your experience." />
+  <meta name="description" content="How to write effective resume bullet points with measurable results and impact." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
