--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>ATS Resume Builder</title>
   <meta name="description" content="Build an ATS-friendly resume and cover letter. Professional templates, PDF export, and keyword match checking." />
   <meta name="google-site-verification" content="xnI6hWhjGn-BaJ3gSVHC29VTDdMpSE1NN7M_HzTItgw" />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
