--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy | ATS Resume Builder</title>
-  <meta name="description" content="Privacy policy for ATS Resume Builder." />
+  <meta name="description" content="Privacy policy for ATS Resume Builder. How we collect, use, and protect your data." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
