--- a/cover-letter.html
+++ b/cover-letter.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cover Letter | ATS Resume Builder</title>
   <meta name="description" content="Write a professional cover letter that matches a job description. Autosave and PDF export." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body class="builder-body">
