--- a/guides/ats-keywords.html
+++ b/guides/ats-keywords.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ATS Keywords: How to Use Them | ATS Resume Builder</title>
   <meta name="description" content="How to identify and use ATS keywords from a job description without keyword stuffing." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
