--- a/guides/cover-letter-examples.html
+++ b/guides/cover-letter-examples.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cover Letter Examples | ATS Resume Builder</title>
-  <meta name="description" content="Professional cover letter examples you can customize for common roles." />
+  <meta name="description" content="Professional cover letter examples and templates for different job applications." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
