--- a/guides/resume-formatting.html
+++ b/guides/resume-formatting.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resume Formatting for ATS | ATS Resume Builder</title>
   <meta name="description" content="ATS resume formatting rules: fonts, headings, layout, bullets, and export tips." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
