--- a/guides/resume-summary-examples.html
+++ b/guides/resume-summary-examples.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resume Summary Examples | ATS Resume Builder</title>
-  <meta name="description" content="Copy-ready resume summary examples for popular roles. Customize to your experience." />
+  <meta name="description" content="Professional resume summary examples for different industries and experience levels." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
