--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms of Use | ATS Resume Builder</title>
-  <meta name="description" content="Terms of use for ATS Resume Builder." />
+  <meta name="description" content="Terms of service for ATS Resume Builder. Rules and guidelines for using our platform." />
+  <meta name="google-adsense-account" content="ca-pub-2396098605485959">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
