--- a/index.html
+++ b/index.html
@@ -9,7 +9,66 @@
   <meta name="google-adsense-account" content="ca-pub-2396098605485959">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2396098605485959"
      crossorigin="anonymous"></script>
+  
+  <!-- Enhanced SEO Meta Tags -->
+  <meta name="keywords" content="resume builder, ATS resume, professional resume, cover letter, job application, career tools, PDF export, keyword optimization">
+  <meta name="author" content="ATS Resume Builder">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta property="og:title" content="ATS Resume Builder - Professional Resume & Cover Letter Creator">
+  <meta property="og:description" content="Build ATS-friendly resumes with AI assistance, professional templates, and real-time optimization. Export to PDF and check keyword match.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ats-resume-builder.com">
+  <meta property="og:image" content="https://ats-resume-builder.com/og-image.png">
+  <meta property="og:site_name" content="ATS Resume Builder">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ATS Resume Builder - Professional Resume Creator">
+  <meta name="twitter:description" content="Build ATS-friendly resumes with AI assistance and professional templates.">
+  <meta name="twitter:image" content="https://ats-resume-builder.com/twitter-image.png">
+  <link rel="canonical" href="https://ats-resume-builder.com">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "ATS Resume Builder",
+    "description": "Build ATS-friendly resumes with AI assistance, professional templates, and real-time optimization",
+    "url": "https://ats-resume-builder.com",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web Browser",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "ATS Resume Builder"
+    },
+    "featureList": [
+      "ATS-friendly resume templates",
+      "AI-powered content suggestions", 
+      "PDF export functionality",
+      "Keyword optimization checker",
+      "Cover letter builder",
+      "Autosave functionality"
+    ],
+    "screenshot": "https://ats-resume-builder.com/screenshot.png"
+  }
+  </script>
+  
   <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./cookie-consent.css" />
+  <link rel="manifest" href="./manifest.json">
+  <meta name="theme-color" content="#7c5cff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Resume Builder">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16.png">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 <body>
   <header class="site-header">
@@ -20,10 +79,15 @@
         <a href="./cover-letter.html">Cover Letter</a>
         <a href="./ats.html">ATS Checker</a>
         <a href="./guides/index.html">Guides</a>
+        <a href="./examples.html">Examples</a>
         <a href="./templates.html">Templates</a>
       </nav>
     </div>
   </header>
+
+  <div id="ad-top-banner" class="ad-slot ad-banner" aria-label="Advertisement">
+    <div class="ad-label">Advertisement</div>
+  </div>
 
   <main class="container">
     <section class="hero">
@@ -43,11 +107,10 @@
       </div>
       <div class="hero-card">
         <div class="card">
-          <div class="card-title">AdSense-ready structure</div>
-          <div class="card-body muted">This site includes content pages (Guides) and compliance pages (Privacy/Terms). Add your AdSense code when approved.</div>
-          <div class="ad-slot" aria-label="Ad slot placeholder">
-            <div class="ad-label">Ad</div>
-            <div class="ad-box">AdSense Placeholder (Responsive)</div>
+          <div class="card-title">Professional Resume Builder</div>
+          <div class="card-body muted">Create ATS-friendly resumes with AI assistance, professional templates, and real-time optimization.</div>
+          <div id="ad-content-1" class="ad-slot" aria-label="Advertisement">
+            <div class="ad-label">Advertisement</div>
           </div>
         </div>
       </div>
@@ -94,5 +157,10 @@
 
   <script src="./site.js"></script>
   <script src="./ai-greeter.js"></script>
+  <script src="./cookie-consent.js"></script>
+  <script src="./analytics.js"></script>
+  <script src="./adsense-config.js"></script>
+  <script src="./i18n.js"></script>
+  <script src="./pwa.js"></script>
 </body>
 </html>
