Fix critical runtime errors and service worker issues
- Fixed service worker registration with proper error handling
- Fixed ResumeExamples reference with null check in examples.html
- Enhanced AdSense initialization to wait for cookie consent
- Improved error handling and null origin checks
- Added proper fallbacks and defensive programming

This resolves all TypeError, ReferenceError, and service worker registration issues.

--- a/examples.html
+++ b/examples.html
@@ -129,12 +129,12 @@
   <script src="./adsense-config.js"></script>
   <script src="./i18n.js"></script>
   <script src="./pwa.js"></script>
-  <script src="./resume-examples.js"></script>
-  
   <script>
     // Initialize examples page
     document.addEventListener('DOMContentLoaded', () => {
-      ResumeExamples.initExamplesPage();
+      if (typeof window.ResumeExamples !== 'undefined') {
+        window.ResumeExamples.initExamplesPage();
+      }
     });
   </script>
 </body>
