--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
   <link rel="stylesheet" href="./cookie-consent.css" />
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#7c5cff">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Resume Builder">
-  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <link rel="apple-touch-icon" href="/icons/icon-192.svg">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16.png">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
